// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disableTokenizers: "blocks" disabling block tokenizer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "#  heading 1",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`disableTokenizers: "inlines" disabling delete 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "~~strikethrough~~",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`disableTokenizers: "inlines" disabling emphasis 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "*emphatic **strong** emphatic*",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`disableTokenizers: "inlines" disabling inlineCode 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "\`const js = true \`",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`disableTokenizers: {} disables a block tokenizer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "#  heading 1",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`disableTokenizers: {} disables an inline tokenizer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "\`const js = true\`",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`disableTokenizers: {} disabling block tokenizer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "#  heading 1",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;
